forms-flow-documents/deployment_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-flow-documents
  namespace : forms-flow-documents
  labels:
    app.kubernetes.io/name: forms-flow-documents
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: forms-flow-documents
  template:
    metadata:
      labels:
        app.kubernetes.io/name: forms-flow-documents
    spec:
      imagePullSecrets:
        - name: private-registry
      containers:
        - name: form-flow-web
          image: sofiamunicipalitydigitall/forms-flow-documents:latest
          ports:
            - containerPort: 5006
              name: http
              protocol: TCP
